--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,10 @@ phases:
       java: corretto11
   build:
     commands:
-    - mvn clean package
+    - mvn test
+  post_build:
+    commands:
+    - mvn package
 
 artifacts:
   files:
